@@ -404,7 +404,7 @@ string get_legend_title(const string& alg)
   string reco[5] = { "gen",  "calo",   "pf",      "trk",      "jpt" };
   string RECO[5] = { "(Gen)","(Calo)", "(PFlow)", "(Tracks)", "(JPT)" };
 
-  string::size_type pos=string::npos; int ireco=-1;
+  size_t pos=string::npos; int ireco=-1;
   while (pos==string::npos&&ireco<4) { pos = tmp.find(reco[++ireco]); }
   if (pos==string::npos) return alg;
   
